force-app/main/default/objects/Mortgage_Case__c/fields/First_Applicant_Home_Number__c.field-meta.xml
<CustomField>
    <fullName>First_Applicant_Home_Number__c</fullName>
    <formula>First_Applicant_Contact__r.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Applicant Home Number</label>
    <type>Text</type>
</CustomField>