force-app/main/default/objects/Mortgage_Case__c/fields/First_Applicant_Mobile__c.field-meta.xml
<CustomField>
    <fullName>First_Applicant_Mobile__c</fullName>
    <formula>First_Applicant_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Applicant Mobile</label>
    <type>Text</type>
</CustomField>