force-app/main/default/objects/Mortgage_Case__c/fields/First_Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>First_Applicant_Phone__c</fullName>
    <formula>First_Applicant_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Applicant Phone</label>
    <type>Text</type>
</CustomField>