force-app/main/default/objects/Mortgage_Case__c/fields/First_Applicant_Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>First_Applicant_Special_Requirements__c</fullName>
    <formula>TEXT(First_Applicant_Contact__r.Special_Requirements__c)</formula>
    <label>First Applicant Special Requirements</label>
    <type>Text</type>
</CustomField>