force-app/main/default/objects/Mortgage_Case__c/fields/First_Applicant_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>First_Applicant_Street_Address__c</fullName>
    <formula>First_Applicant_Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Applicant Street Address</label>
    <type>Text</type>
</CustomField>