force-app/main/default/objects/Mortgage_Case__c/fields/FMA_Submitted_Stage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FMA_Submitted_Stage_End_Date__c</fullName>
    <label>FMA Submitted Stage End Date</label>
    <type>Date</type>
</CustomField>