force-app/main/default/objects/Mortgage_Case__c/fields/Freelegalfees__c.field-meta.xml
<CustomField>
    <fullName>Freelegalfees__c</fullName>
    <label>Free legal fees?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>