force-app/main/default/objects/Mortgage_Case__c/fields/Gambling_Sum__c.field-meta.xml
<CustomField>
    <fullName>Gambling_Sum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gambling Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>