force-app/main/default/objects/Mortgage_Case__c/fields/Ground_rent_annual__c.field-meta.xml
<CustomField>
    <fullName>Ground_rent_annual__c</fullName>
    <label>Ground Rent (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>