force-app/main/default/objects/Mortgage_Case__c/fields/Have_you_borrowed_further_since_January__c.field-meta.xml
<CustomField>
    <fullName>Have_you_borrowed_further_since_January__c</fullName>
    <label>Have you borrowed further since January</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>