force-app/main/default/objects/Mortgage_Case__c/fields/Havevaluationfeesincluded__c.field-meta.xml
<CustomField>
    <fullName>Havevaluationfeesincluded__c</fullName>
    <label>Have valuation fees included?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>