force-app/main/default/objects/Mortgage_Case__c/fields/IndividualOrCompany__c.field-meta.xml
<CustomField>
    <fullName>IndividualOrCompany__c</fullName>
    <label>Individual Or Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>