force-app/main/default/objects/Mortgage_Case__c/fields/InterestOnlyLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>InterestOnlyLoanAmount__c</fullName>
    <label>Interest Only Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>