force-app/main/default/objects/Mortgage_Case__c/fields/Investments_Sum__c.field-meta.xml
<CustomField>
    <fullName>Investments_Sum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Investments Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>