force-app/main/default/objects/Mortgage_Case__c/fields/Is_First_Applicant_Contact_Blak__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Applicant_Contact_Blak__c</fullName>
    <formula>IF(ISBLANK(First_Applicant_Contact__c), True, False)</formula>
    <label>Is First Applicant Contact Blak</label>
    <type>Checkbox</type>
</CustomField>