force-app/main/default/objects/Mortgage_Case__c/fields/Isthepropertyofanonstandard_cons__c.field-meta.xml
<CustomField>
    <fullName>Isthepropertyofanonstandard_cons__c</fullName>
    <inlineHelpText>Is the property of a non-standard cons (ie. Thatched roof, barn conversion etc)</inlineHelpText>
    <label>Is the property of a non-standard cons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>