force-app/main/default/objects/Mortgage_Case__c/fields/Last_sold_date__c.field-meta.xml
<CustomField>
    <fullName>Last_sold_date__c</fullName>
    <label>Last sold date</label>
    <type>Date</type>
</CustomField>