force-app/main/default/objects/Mortgage_Case__c/fields/Last_sold_price__c.field-meta.xml
<CustomField>
    <fullName>Last_sold_price__c</fullName>
    <label>Last sold price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>