force-app/main/default/objects/Mortgage_Case__c/fields/Lifestyle_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Lifestyle_Expenses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lifestyle Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>