force-app/main/default/objects/Mortgage_Case__c/fields/Mandy_application_number__c.field-meta.xml
<CustomField>
    <fullName>Mandy_application_number__c</fullName>
    <label>Case ID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>