force-app/main/default/objects/Mortgage_Case__c/fields/Might_your_expenditure_change__c.field-meta.xml
<CustomField>
    <fullName>Might_your_expenditure_change__c</fullName>
    <inlineHelpText>Might your expenditure change significantly within the foreseeable future?</inlineHelpText>
    <label>Might your expenditure change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>