force-app/main/default/objects/Mortgage_Case__c/fields/Monthly_rental_income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_rental_income__c</fullName>
    <label>Monthly Rental Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>