force-app/main/default/objects/Mortgage_Case__c/fields/Mortgage_Product_term__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Product_term__c</fullName>
    <label>Preferred Mortgage Product Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>5 years</fullName>
            </value>
            <value>
                <fullName>10 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>