force-app/main/default/objects/Mortgage_Case__c/fields/Mortgage_property_address_city__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_property_address_city__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>