force-app/main/default/objects/Mortgage_Case__c/fields/Mortgage_property_address_line1__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_property_address_line1__c</fullName>
    <label>Mortgage Property Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>