force-app/main/default/objects/Mortgage_Case__c/fields/Mortgage_property_address_postcode__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_property_address_postcode__c</fullName>
    <label>Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>