force-app/main/default/objects/Mortgage_Case__c/fields/Mortgage_Rent_Sum__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Rent_Sum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mortgage Rent Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>