force-app/main/default/objects/Mortgage_Case__c/fields/MortgageType__c.field-meta.xml
<CustomField>
    <fullName>MortgageType__c</fullName>
    <label>Mortgage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bridging Loan</fullName>
            </value>
            <value>
                <fullName>Business Lending</fullName>
            </value>
            <value>
                <fullName>Buy To Let Mortgage</fullName>
            </value>
            <value>
                <fullName>Buy To Let Remortgage</fullName>
            </value>
            <value>
                <fullName>Commercial Mortgage /Loans</fullName>
            </value>
            <value>
                <fullName>Development Finance</fullName>
            </value>
            <value>
                <fullName>Equity Release</fullName>
            </value>
            <value>
                <fullName>General Insurance</fullName>
            </value>
            <value>
                <fullName>Let To Buy</fullName>
            </value>
            <value>
                <fullName>Residential Mortgage</fullName>
            </value>
            <value>
                <fullName>Residential Remortgage</fullName>
            </value>
            <value>
                <fullName>Second Charge- BTL &amp; Comm</fullName>
            </value>
            <value>
                <fullName>Second Charge- Residential</fullName>
            </value>
            <value>
                <fullName>Property Purchase</fullName>
            </value>
            <value>
                <fullName>Shared Equity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>