force-app/main/default/objects/Mortgage_Case__c/fields/MortgageX_Last_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>MortgageX_Last_Sold_Date__c</fullName>
    <label>Last Sold Date</label>
    <type>Date</type>
</CustomField>