force-app/main/default/objects/Mortgage_Case__c/fields/MortgagX_Estimated_Price__c.field-meta.xml
<CustomField>
    <fullName>MortgagX_Estimated_Price__c</fullName>
    <label>Estimated Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>