force-app/main/default/objects/Mortgage_Case__c/fields/MortgagX_Last_Sold_Price__c.field-meta.xml
<CustomField>
    <fullName>MortgagX_Last_Sold_Price__c</fullName>
    <label>Last Sold Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>