force-app/main/default/objects/Mortgage_Case__c/fields/MortgagX_Property_tenure__c.field-meta.xml
<CustomField>
    <fullName>MortgagX_Property_tenure__c</fullName>
    <label>Property tenure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Leasehold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>