force-app/main/default/objects/Mortgage_Case__c/fields/MortgagX_Rental_estimate__c.field-meta.xml
<CustomField>
    <fullName>MortgagX_Rental_estimate__c</fullName>
    <label>Rental estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>