force-app/main/default/objects/Mortgage_Case__c/fields/No_Days_Case_Was_in_Stage_Introduction__c.field-meta.xml
<CustomField>
    <fullName>No_Days_Case_Was_in_Stage_Introduction__c</fullName>
    <formula>Factfind_Ongoing_Stage_End_Date__c - Factfind_Ongoing_Date__c</formula>
    <label># of Days Case Was in Stage Introduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>