force-app/main/default/objects/Mortgage_Case__c/fields/No_early_repayment_charge_overhang__c.field-meta.xml
<CustomField>
    <fullName>No_early_repayment_charge_overhang__c</fullName>
    <inlineHelpText>No early repayment charge overhang after selected rate ends?</inlineHelpText>
    <label>No early repayment charge overhang</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>