force-app/main/default/objects/Mortgage_Case__c/fields/No_higher_lending_charge__c.field-meta.xml
<CustomField>
    <fullName>No_higher_lending_charge__c</fullName>
    <inlineHelpText>No higher lending charge?</inlineHelpText>
    <label>No higher lending charge?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>