force-app/main/default/objects/Mortgage_Case__c/fields/No_of_Days_From_Submitted_to_Offered__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_From_Submitted_to_Offered__c</fullName>
    <formula>TODAY() -  Application_Offered_Date__c</formula>
    <label>No. of Days From Submitted to Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>