force-app/main/default/objects/Mortgage_Case__c/fields/No_Of_Days_Since_Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_Since_Application_Submitted__c</fullName>
    <formula>TODAY() - Application_Submitted_Date__c</formula>
    <label>No Of Days Since Application Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>