force-app/main/default/objects/Mortgage_Case__c/fields/NumberofBathrooms__c.field-meta.xml
<CustomField>
    <fullName>NumberofBathrooms__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>