force-app/main/default/objects/Mortgage_Case__c/fields/Numberofbeds__c.field-meta.xml
<CustomField>
    <fullName>Numberofbeds__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>