force-app/main/default/objects/Mortgage_Case__c/fields/of_Days_Case_Was_in_Case_Offered__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Case_Was_in_Case_Offered__c</fullName>
    <formula>Case_Offered_Stage_End_Date__c -  Application_Offered_Date__c</formula>
    <label># of Days Case Was in Case Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>