force-app/main/default/objects/Mortgage_Case__c/fields/of_Days_Case_Was_in_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Case_Was_in_Closed_Lost__c</fullName>
    <formula>Closed_Lost_Stage_End_Date__c -  Closed_Lost_Stage_Date__c</formula>
    <label># of Days Case Was in Closed Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>