force-app/main/default/objects/Mortgage_Case__c/fields/of_Days_Case_Was_in_DIP_Obtained__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Case_Was_in_DIP_Obtained__c</fullName>
    <formula>DIP_Obtained_Stage_End_Date__c -  DIP_Obtained_Date__c</formula>
    <label># of Days Case Was in DIP Obtained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>