force-app/main/default/objects/Mortgage_Case__c/fields/of_Days_Case_Was_in_FMA_Submitted__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Case_Was_in_FMA_Submitted__c</fullName>
    <formula>FMA_Submitted_Stage_End_Date__c -  Application_Submitted_Date__c</formula>
    <label># of Days Case Was in FMA Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>