force-app/main/default/objects/Mortgage_Case__c/fields/of_Days_Case_Was_in_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Case_Was_in_Recommendation__c</fullName>
    <formula>Recommendations_Stage_Date_Date__c -  Recommendations_Date__c</formula>
    <label># of Days Case Was in Recommendation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>