force-app/main/default/objects/Mortgage_Case__c/fields/of_Days_Case_Was_in_Stage_1st_Meeting__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Case_Was_in_Stage_1st_Meeting__c</fullName>
    <formula>Factfind_Ongoing_Stage_End_Date__c -  Factfind_Ongoing_Stage_End_Date__c</formula>
    <label># of Days Case Was in Stage 1st Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>