force-app/main/default/objects/Mortgage_Case__c/fields/of_Days_Case_Was_in_Valuation_Ins__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Case_Was_in_Valuation_Ins__c</fullName>
    <formula>Valuation_Instructed_Stage_End_Date__c -  Valuation_Instructed_Date__c</formula>
    <label># of Days Case Was in Valuation Ins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>