force-app/main/default/objects/Mortgage_Case__c/fields/Other_commitments_rental_fees_monthly__c.field-meta.xml
<CustomField>
    <fullName>Other_commitments_rental_fees_monthly__c</fullName>
    <label>Other Commitments Rental Fees (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>