force-app/main/default/objects/Mortgage_Case__c/fields/Other_property_costs_monthly__c.field-meta.xml
<CustomField>
    <fullName>Other_property_costs_monthly__c</fullName>
    <label>Other Property Costs (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>