force-app/main/default/objects/Mortgage_Case__c/fields/paidOff__c.field-meta.xml
<CustomField>
    <fullName>paidOff__c</fullName>
    <description>Do you want the certainty that the entire capital amount at the end of the mortgage term will be paid off?</description>
    <label>Entire capital of mortgage paid off?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>