force-app/main/default/objects/Mortgage_Case__c/fields/Partner_Title__c.field-meta.xml
<CustomField>
    <fullName>Partner_Title__c</fullName>
    <formula>Second_applicant_contact__r.Title</formula>
    <label>Partner Title</label>
    <type>Text</type>
</CustomField>