force-app/main/default/objects/Mortgage_Case__c/fields/Plot_area__c.field-meta.xml
<CustomField>
    <fullName>Plot_area__c</fullName>
    <label>Plot Area (in acres)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>