force-app/main/default/objects/Mortgage_Case__c/fields/PreferredMortgagetermYear__c.field-meta.xml
<CustomField>
    <fullName>PreferredMortgagetermYear__c</fullName>
    <label>Preferred Mortgage term Year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>